<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkMode"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etGuessNumber"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/entryHint"
        android:inputType="number"
        android:textColor="@color/freshMint"
        android:textColorHint="@color/freshMint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/anchorCenter"
        android:layout_width="1dp"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/freshMint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGuessNumber" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btnCalculate"
        app:layout_constraintEnd_toStartOf="@+id/anchorCenter"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGuessNumber" />

    <Button
        android:id="@+id/btnRank"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/btnRank"
        app:layout_constraintEnd_toStartOf="@+id/anchorCenter"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGuessNumber" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/anchorCenter"
        app:layout_constraintTop_toBottomOf="@+id/etGuessNumber" />

    <Button
        android:id="@+id/btnTotals"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/btnTotals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/anchorCenter"
        app:layout_constraintTop_toBottomOf="@+id/etGuessNumber" />

    <TextView
        android:id="@+id/tvGuesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:textColor="@color/freshMint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anchorCenter" />

</androidx.constraintlayout.widget.ConstraintLayout>